# rewind

./: .gitignore  AGENTS.md  BUILDLOG.md  DEMO.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
demo/: README.md
policies/: v2.json
rewind/: __init__.py  audit.py  cli.py  crypto.py  demo.py  events.py  evidence.py  git_state.py  inspect.py  mcp_server.py  policy.py  receipt.py  replay.py  report.py  store.py  task.py
rewind/default_policies/: v1.json
tests/: conftest.py  test_audit_workflow.py  test_cli.py  test_concurrency.py  test_crypto.py  test_demo.py  test_evidence.py  test_git_state.py  test_inspect.py  test_mcp.py  test_receipt.py  test_replay.py
