[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rewind-agent-recorder"
version = "0.1.0"
description = "A flight recorder for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rewind contributors" }]
dependencies = [
  "mcp>=1.0,<2",
  "PyNaCl>=1.5,<2",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
rewind = "rewind.cli:app"
rewind-mcp = "rewind.mcp_server:main"

[tool.setuptools.packages.find]
include = ["rewind*"]

[tool.setuptools.package-data]
rewind = ["default_policies/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

